BF-004: Coverage plugin install

--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   ],
   "author": "deepak.m.shrma@gmail.com",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "karma-cli": "^0.1.0",
+    "karma-coverage": "^0.5.0"
+  },
   "devDependencies": {
     "chai": "^3.0.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
     "karma-chai": "^0.1.0",
     "karma-jasmine": "^0.3.6",
+    "karma-junit-reporter": "^0.3.3",
     "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.0",
     "mocha": "^2.2.5",
