--- a/bower.json
+++ b/bower.json
@@ -32,5 +32,8 @@
     "angular-route": "~1.4.0",
     "angular-animate": "~1.4.3",
     "angular-ui-tinymce": "~0.0.9"
+  },
+  "resolutions": {
+    "angular": "~1.x"
   }
 }
