--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "videogular-controls": "~1.2.6",
-    "videogular-overlay-play": "~1.2.6"
+    "videogular-overlay-play": "~1.2.6",
+    "ng-videosharing-embed": "~0.3.3"
   }
 }
