--- a/bower.json
+++ b/bower.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "videogular-controls": "~1.2.6",
     "videogular-overlay-play": "~1.2.6",
-    "ng-videosharing-embed": "~0.3.3"
+    "ng-videosharing-embed": "~0.3.3",
+    "ngSanitize": "~0.0.2"
   }
 }
