--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "media-center-plugin",
   "version": "0.0.0",
   "description": "\"media-center-plugin\"",
+   "supportSite":"http://learn.appdocumentation.com/plugin-tutorials/media-center-manual-plugin-tutorial",
   "scripts": {
     "postinstall": "./node_modules/.bin/bower install",
     "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS"
